# Nyx

./: .env  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  README.md  build-docker.sh  clean  docker-build  docker-compose.yaml  docker-run  index.html  run  servers.json  setup-db  setup.sql
db/: all.sql  db-run  setup.sql  test-data.sql
src/: main.rs
src/components/: app.rs  mod.rs  tree_view.rs
src/models/: node.rs
