[package]
name = "notes"
version = "0.1.0"
edition = "2021"
rust-version = "1.85"

[dependencies]
console_error_panic_hook = "0.1.7"
leptos = { version = "0.7.8", features = ["csr"] }
wasm-bindgen = "0.2.89"
serde_json = "1.0.113"
js-sys = "0.3.67"
leptos-use = { version = "0.15.7", features = ["storage"] }

[dev-dependencies]
wasm-bindgen-test = "0.3.39"

#[profile.wasm-release]
#inherits = "release"
#opt-level = 'z'
#lto = true
#codegen-units = 1

#[package.metadata.leptos]
#lib-profile-release = "wasm-release"
